# bardbox

./: .gitignore  README.md  VIEWS.md  pyproject.toml
docs/: comparison.md
module1_from_scratch/: config.py  model.py  plot_loss.py  report.md  sample.py  train.py
module1_from_scratch/data/: meta.json  prepare.py
module2_finetune/: build_dataset.py  colab_finetune.ipynb  local_finetune_cpu.py  merge_and_quantize.md  report.md  results.json
module2_finetune/data/: pairs.tsv  train.jsonl  val.jsonl
module3_app/: README.md
module3_app/backend/: app.py  inference.py  prompts.py
module3_app/frontend/: index.html
module3_app/frontend/assets/: app.js
module3_app/models/: .gitkeep
module3_app/privacy/: airplane_mode_checklist.md  no_egress_test.sh
module3_app/tests/: test_api.py
