[project]
name = "bardbox"
version = "0.1.0"
description = "A private LLM lab: train a tiny GPT from scratch, fine-tune a real model, and run it fully offline — all on a CPU-only laptop, all on Shakespeare."
readme = "README.md"
requires-python = ">=3.10"

# Module 1 (train-from-scratch) only needs PyTorch + matplotlib. That's it — the
# whole point is that the training-mechanics demo runs on a plain CPU laptop.
dependencies = [
    "torch>=2.2",
    "matplotlib>=3.7",
]

# Module 2 (fine-tuning) runs on a free Colab/Kaggle GPU, so its heavier deps
# (transformers, peft, trl, bitsandbytes) live in the notebook, not here.
# Module 3 (the offline app) deps are declared in module3_app/ when we build it.

# Module 3 (the offline Writing Studio) app + test deps.
[project.optional-dependencies]
app = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",        # used to reach a local llama.cpp/Ollama server (127.0.0.1 only)
]
test = [
    "pytest>=8",
]
# For real on-device inference, also: pip install llama-cpp-python  (optional; loads a GGUF).

[tool.setuptools]
py-modules = []
